[feature] Improve JVM platform code

--- a/gradle.properties
+++ b/gradle.properties
@@ -22,5 +22,6 @@ android.injected.androidTest.leaveApksInstalledAfterRun=true
 ksp.useKSP2=true
 
 # Version
-versionName=3.3-alpha11
+versionName=3.3-alpha12
 versionCode=30
+versionForDesktop=1.0.0
