--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,15 @@
 [versions]
-agp = "8.13.1"
-kotlin = "2.2.21"
+agp = "8.13.2"
+kotlin = "2.3.0"
 kotlinx-atomicfu = "0.29.0"
 kotlinx-datetime = "0.7.1"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
 kotlinx-io = "0.8.2"
 ksp = "2.3.0"
-compose = "1.10.0-beta02"
+compose = "1.10.0-rc02"
 compose-material3 = "1.10.0-alpha05"
-compose-material3-adaptive = "1.3.0-alpha02"
+compose-material3-adaptive = "1.3.0-alpha03"
 compose-materialIconsExtended = "1.7.3"
 lifecycle = "2.9.6"
 navigation = "2.9.1"
@@ -140,7 +140,7 @@ androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-
 androidx-tracing-perfetto = { module = "androidx.tracing:tracing-perfetto", version.ref = "tracing-perfetto" }
 androidx-tracing-perfetto-binary = { module = "androidx.tracing:tracing-perfetto-binary", version.ref = "tracing-perfetto" }
 
-mockito-core = { module = "org.mockito:mockito-core", version = "5.20.0" }
+mockito-core = { module = "org.mockito:mockito-core", version = "5.21.0" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "6.1.0" }
 
 [plugins]
