--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,9 +6,9 @@ kotlinx-datetime = "0.7.1"
 kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.9.0"
 kotlinx-io = "0.8.2"
-ksp = "2.3.0"
-compose = "1.10.0-rc02"
-compose-material3 = "1.10.0-alpha05"
+ksp = "2.3.4"
+compose = "1.11.0-alpha01"
+compose-material3 = "1.11.0-alpha01"
 compose-material3-adaptive = "1.3.0-alpha03"
 compose-materialIconsExtended = "1.7.3"
 lifecycle = "2.9.6"
@@ -17,7 +17,7 @@ ktor = "3.3.3"
 koin = "4.1.1"
 ksoup = "0.2.5"
 coil = "3.3.0"
-paging = "3.4.0-alpha04"
+paging = "3.4.0-beta01"
 worker = "2.11.0"
 room = "2.8.4"
 filekit = "0.12.0"
@@ -27,7 +27,7 @@ tracing-perfetto = "1.0.1"
 [libraries]
 androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.17.0" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version = "1.2.0" }
-androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "1.12.1" }
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "1.12.2" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1" }
 androidx-constraintlayout-compose = { module = "tech.annexflow.compose:constraintlayout-compose-multiplatform", version = "0.6.1-shaded" }
 androidx-media = { module = "androidx.media:media", version = "1.7.1" }
@@ -136,7 +136,7 @@ androidx-work-test = { module = "androidx.work:work-testing", version.ref = "wor
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
 kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinx-coroutines" }
 
-androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version = "1.10.0" }
+androidx-compose-runtime-tracing = { module = "androidx.compose.runtime:runtime-tracing", version = "1.11.0-alpha01" }
 androidx-tracing-perfetto = { module = "androidx.tracing:tracing-perfetto", version.ref = "tracing-perfetto" }
 androidx-tracing-perfetto-binary = { module = "androidx.tracing:tracing-perfetto-binary", version.ref = "tracing-perfetto" }
 
@@ -145,7 +145,6 @@ mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version = "6.1.
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
-android-library = { id = "com.android.library", version.ref = "agp" }
 android-kotlin-multiplatform-library = { id = "com.android.kotlin.multiplatform.library", version.ref = "agp" }
 android-test = { id = "com.android.test", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
