--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Gradle
-org.gradle.jvmargs=-Xmx4096m -XX:MaxMetaspaceSize=1024m -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
@@ -8,12 +8,10 @@ org.gradle.configuration-cache.parallel=true
 
 # Kotlin
 kotlin.code.style=official
-kotlin.daemon.jvmargs=-Xmx3072M
+kotlin.daemon.jvmargs=-Xmx3G
 
 # Android
 android.useAndroidX=true
-android.nonTransitiveRClass=true
-android.enableAppCompileTimeRClass=true
 android.enableBuildConfigAsBytecode=true
 android.r8.maxWorkers=4
 android.injected.androidTest.leaveApksInstalledAfterRun=true
