--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.PodAura"
-        tools:targetApi="31">
+        tools:targetApi="33">
         <profileable
             android:enabled="true"
             android:shell="true"
@@ -67,7 +67,7 @@
         <activity
             android:name=".ui.activity.MainActivity"
             android:exported="true"
-            android:theme="@style/Theme.PodAura.NoActionBar.Splash"
+            android:theme="@style/Theme.PodAura.Splash"
             android:windowSoftInputMode="adjustResize">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
