[feature] Improve code for Windows

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -120,6 +120,9 @@ reorderable = { module = "sh.calvin.reorderable:reorderable", version = "3.0.0" 
 compottie = { module = "io.github.alexzhirkevich:compottie", version = "2.0.2" }
 
 java-jna = { module = "net.java.dev.jna:jna", version = "5.18.1" }
+java-jna-platform = { module = "net.java.dev.jna:jna-platform", version = "5.18.1" }
+
+ocpsoft-prettytime = { module = "org.ocpsoft.prettytime:prettytime", version = "5.0.9.Final" }
 
 skyd666-settings = { module = "io.github.skyd666:settings", version = "1.0-beta08" }
 skyd666-compone = { module = "io.github.skyd666:compone", version = "1.0-beta12" }
