[build] Init Xcode project for iOS

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,11 @@
 /captures
 .externalNativeBuild
 .cxx
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcodeproj/project.xcworkspace/
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
 local.properties
 signing.properties
