--- a/gradle.properties
+++ b/gradle.properties
@@ -25,6 +25,9 @@ kotlin.native.binary.smallBinary=true
 # Ksp
 ksp.useKSP2=true
 
+# Xcode
+xcodeproj=./ios/PodAura.xcodeproj
+
 # Version
 versionName=3.3-alpha16
 versionCode=30
