--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,5 @@
 # Gradle
-org.gradle.jvmargs=-Xmx4G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-Xmx8G -XX:MaxMetaspaceSize=1G -Dfile.encoding=UTF-8
 org.gradle.parallel=true
 org.gradle.caching=true
 org.gradle.configureondemand=true
@@ -23,7 +23,7 @@ android.injected.androidTest.leaveApksInstalledAfterRun=true
 kotlin.native.binary.smallBinary=true
 
 # Xcode
-xcodeproj=./ios/PodAura.xcodeproj
+xcodeproj=./platform/ios/PodAura.xcodeproj
 
 # Version
 versionName=3.3-alpha16
