--- a/platform/ios/Configuration/Config.xcconfig
+++ b/platform/ios/Configuration/Config.xcconfig
@@ -1,7 +1,7 @@
 TEAM_ID=
 
 PRODUCT_NAME=PodAura
-PRODUCT_BUNDLE_IDENTIFIER=com.skyd.podaura$(TEAM_ID)
+PRODUCT_BUNDLE_IDENTIFIER=com.skyd.podaura
 
 CURRENT_PROJECT_VERSION=1
 MARKETING_VERSION=1.0
