--- a/.github/workflows/pre_release.yml
+++ b/.github/workflows/pre_release.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ ubuntu-latest, macos-latest, macos-15-intel ]
+        os: [ ubuntu-latest, macos-26, macos-15-intel ]
         include:
           - os: ubuntu-latest
             target-platform: Android
