--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -11,12 +11,12 @@ compose-material3 = "1.11.0-alpha02"
 compose-material3-adaptive = "1.3.0-alpha04"
 compose-materialIconsExtended = "1.7.3"
 lifecycle = "2.9.6"
-navigation = "2.9.1"
+navigation3 = "1.0.1"
 ktor = "3.4.0"
 koin = "4.1.1"
 ksoup = "0.2.5"
 coil = "3.3.0"
-paging = "3.4.0"
+paging = "3.4.1"
 worker = "2.11.1"
 room = "2.8.4"
 filekit = "0.12.0"
@@ -26,7 +26,7 @@ tracing-perfetto = "1.0.1"
 [libraries]
 androidx-core-ktx = { module = "androidx.core:core-ktx", version = "1.17.0" }
 androidx-core-splashscreen = { module = "androidx.core:core-splashscreen", version = "1.2.0" }
-androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "1.12.3" }
+androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version = "1.12.4" }
 androidx-appcompat = { module = "androidx.appcompat:appcompat", version = "1.7.1" }
 androidx-constraintlayout-compose = { module = "tech.annexflow.compose:constraintlayout-compose-multiplatform", version = "0.6.1-shaded" }
 androidx-media = { module = "androidx.media:media", version = "1.7.1" }
@@ -43,12 +43,12 @@ jetbrains-compose-material3 = { module = "org.jetbrains.compose.material3:materi
 jetbrains-compose-material3-window-size = { module = "org.jetbrains.compose.material3:material3-window-size-class", version.ref = "compose-material3" }
 jetbrains-compose-material3-adaptive = { module = "org.jetbrains.compose.material3.adaptive:adaptive", version.ref = "compose-material3-adaptive" }
 jetbrains-compose-material3-adaptive-layout = { module = "org.jetbrains.compose.material3.adaptive:adaptive-layout", version.ref = "compose-material3-adaptive" }
-jetbrains-compose-material3-adaptive-navigation = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation", version.ref = "compose-material3-adaptive" }
+jetbrains-compose-material3-adaptive-navigation3 = { module = "org.jetbrains.compose.material3.adaptive:adaptive-navigation3", version.ref = "compose-material3-adaptive" }
 jetbrains-compose-materialIconsExtended = { module = "org.jetbrains.compose.material:material-icons-extended", version.ref = "compose-materialIconsExtended" }
 jetbrains-compose-desktop-common = { module = "org.jetbrains.compose.desktop:desktop", version.ref = "compose" }
 jetbrains-compose-components-resources = { module = "org.jetbrains.compose.components:components-resources", version.ref = "compose" }
 
-jetbrains-navigation-compose = { module = "org.jetbrains.androidx.navigation:navigation-compose", version.ref = "navigation" }
+jetbrains-navigation3-ui = { module = "org.jetbrains.androidx.navigation3:navigation3-ui", version = "1.1.0-alpha02" }
 jetbrains-lifecycle-viewmodel = { module = "org.jetbrains.androidx.lifecycle:lifecycle-viewmodel", version.ref = "lifecycle" }
 jetbrains-lifecycle-runtime-compose = { module = "org.jetbrains.androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle" }
 
@@ -70,6 +70,8 @@ androidx-datastore-preferences = { module = "androidx.datastore:datastore-prefer
 androidx-work-runtime-ktx = { module = "androidx.work:work-runtime-ktx", version.ref = "worker" }
 androidx-paging-common = { module = "androidx.paging:paging-common", version.ref = "paging" }
 androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "paging" }
+androidx-navigation3-runtime = { module = "androidx.navigation3:navigation3-runtime", version.ref = "navigation3" }
+androidx-lifecycle-viewmodel-navigation3 = { module = "androidx.lifecycle:lifecycle-viewmodel-navigation3", version = "2.10.0" }
 
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
 androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
@@ -124,7 +126,7 @@ icu4j = { module = "com.ibm.icu:icu4j", version = "78.1" }
 ocpsoft-prettytime = { module = "org.ocpsoft.prettytime:prettytime", version = "5.0.9.Final" }
 
 skyd666-settings = { module = "io.github.skyd666:settings", version = "1.0-beta08" }
-skyd666-compone = { module = "io.github.skyd666:compone", version = "1.0-beta12" }
+skyd666-compone = { module = "io.github.skyd666:compone", version = "1.0-beta21" }
 skyd666-mvi = { module = "io.github.skyd666:mvi", version = "1.0-beta05" }
 
 junit = { module = "junit:junit", version = "4.13.2" }
