--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,7 +6,7 @@ kotlinx-coroutines = "1.10.2"
 kotlinx-serialization = "1.10.0"
 kotlinx-io = "0.9.0"
 ksp = "2.3.4"
-compose = "1.11.0-alpha02"
+compose = "1.11.0-alpha03"
 compose-material3 = "1.11.0-alpha02"
 compose-material3-adaptive = "1.3.0-alpha04"
 compose-materialIconsExtended = "1.7.3"
@@ -19,7 +19,7 @@ coil = "3.3.0"
 paging = "3.4.1"
 worker = "2.11.1"
 room = "2.8.4"
-filekit = "0.12.0"
+filekit = "0.13.0"
 xmlutil = "0.91.3"
 tracing-perfetto = "1.0.1"
 
@@ -36,6 +36,7 @@ desugar-jdk-libs = { module = "com.android.tools:desugar_jdk_libs", version = "2
 
 jetbrains-compose-runtime = { module = "org.jetbrains.compose.runtime:runtime", version.ref = "compose" }
 jetbrains-compose-foundation = { module = "org.jetbrains.compose.foundation:foundation", version.ref = "compose" }
+jetbrains-compose-animation = { module = "org.jetbrains.compose.animation:animation", version.ref = "compose" }
 jetbrains-compose-ui = { module = "org.jetbrains.compose.ui:ui", version.ref = "compose" }
 jetbrains-compose-ui-preview = { module = "org.jetbrains.compose.ui:ui-tooling-preview", version.ref = "compose" }
 jetbrains-compose-ui-backhandler = { module = "org.jetbrains.compose.ui:ui-backhandler", version.ref = "compose" }
@@ -116,7 +117,7 @@ coil-svg = { module = "io.coil-kt.coil3:coil-svg", version.ref = "coil" }
 coil-video = { module = "io.coil-kt.coil3:coil-video", version.ref = "coil" }
 
 material-kolor = { module = "com.materialkolor:material-kolor", version = "5.0.0-alpha06" }
-reorderable = { module = "sh.calvin.reorderable:reorderable", version = "3.0.0" }
+# reorderable = { module = "sh.calvin.reorderable:reorderable", version = "3.0.0" }
 compottie = { module = "io.github.alexzhirkevich:compottie", version = "2.0.3" }
 
 java-jna = { module = "net.java.dev.jna:jna", version = "5.18.1" }
